Add some good-to-have settings in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,33 @@ members = [
 ]
 resolver = "2"
 
+# Inherited metadata for all crates in the workspace.
 [workspace.package]
 edition = "2021"
+license = "MIT"
+authors = ["Harvester Contributors"]
+rust-version = "1.83"
+
+# A central place to define all common dependencies.
+# This ensures every crate uses the same version.
+[workspace.dependencies]
+anyhow = "1"
+thiserror = "2.0"
+tracing = "0.1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
+# Profile for development builds (`cargo build`, `cargo run`).
+[profile.dev]
+opt-level = 0
+# Speeds up compilation by enabling more parallelism.
+codegen-units = 256
+
+# Profile for release builds (`cargo build --release`).
+[profile.release]
+opt-level = 3
+lto = "fat"
+codegen-units = 1
+
+[workspace.lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
