--- a/crates/harvester_engine/Cargo.toml
+++ b/crates/harvester_engine/Cargo.toml
@@ -5,4 +5,13 @@ edition = "2021"
 publish = false
 
 [dependencies]
+bytes = "1"
+async-trait = "0.1"
+futures-util = "0.3"
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
+tokio = { version = "1", features = ["rt-multi-thread", "time"] }
+
+[dev-dependencies]
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
+wiremock = "0.6"
 
