--- a/crates/harvester_engine/Cargo.toml
+++ b/crates/harvester_engine/Cargo.toml
@@ -10,8 +10,14 @@ async-trait = "0.1"
 futures-util = "0.3"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
 tokio = { version = "1", features = ["rt-multi-thread", "time"] }
+html2md = "0.2"
+scraper = "0.19"
+encoding_rs = "0.8"
+chardetng = "0.1"
+thiserror = "1"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
 wiremock = "0.6"
+pretty_assertions = "1"
 
