--- a/crates/harvester_engine/Cargo.toml
+++ b/crates/harvester_engine/Cargo.toml
@@ -15,6 +15,7 @@ scraper = "0.25.0"
 encoding_rs = "0.8"
 chardetng = "0.1"
 thiserror = "2"
+sha2 = "0.10"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
