--- a/crates/harvester_engine/Cargo.toml
+++ b/crates/harvester_engine/Cargo.toml
@@ -10,6 +10,7 @@ async-trait = "0.1"
 futures-util = "0.3"
 reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "stream"] }
 tokio = { version = "1", features = ["rt-multi-thread", "time"] }
+tokio-util = "0.7"
 html2md = "0.2"
 scraper = "0.25.0"
 encoding_rs = "0.8"
