--- a/crates/harvester_engine/Cargo.toml
+++ b/crates/harvester_engine/Cargo.toml
@@ -18,6 +18,7 @@ chardetng = "0.1"
 thiserror = "2"
 sha2 = "0.10"
 tempfile = "3"
+serde_json = "1"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
