--- a/crates/harvester_app/Cargo.toml
+++ b/crates/harvester_app/Cargo.toml
@@ -10,3 +10,4 @@ harvester_engine = { path = "../harvester_engine" }
 commanductui = { path = "../../src/CommanDuctUI" }
 log = "0.4"
 env_logger = "0.11"
+chrono = { version = "0.4", features = ["clock"] }
