--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
     "crates/harvester_app",
     "crates/harvester_core",
-    "crates/harvester_engine"
+    "crates/harvester_engine",
+    "crates/engine_logging",
 ]
 resolver = "2"
 
@@ -21,6 +22,8 @@ thiserror = "2.0"
 tracing = "0.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+log = "0.4"
+simplelog = "0.12"
 
 # Profile for development builds (`cargo build`, `cargo run`).
 [profile.dev]
