--- a/crates/harvester_app/Cargo.toml
+++ b/crates/harvester_app/Cargo.toml
@@ -7,7 +7,8 @@ publish = false
 [dependencies]
 harvester_core = { path = "../harvester_core" }
 harvester_engine = { path = "../harvester_engine" }
+engine_logging = { path = "../engine_logging" }
 commanductui = { path = "../../src/CommanDuctUI" }
-log = "0.4"
-env_logger = "0.11"
+log.workspace = true
+simplelog.workspace = true
 chrono = { version = "0.4", features = ["clock"] }
