--- a/crates/harvester_engine/Cargo.toml
+++ b/crates/harvester_engine/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 publish = false
 
 [dependencies]
+engine_logging = { path = "../engine_logging" }
+log.workspace = true
 bytes = "1"
 async-trait = "0.1"
 futures-util = "0.3"
