--- a/crates/harvester_engine/Cargo.toml
+++ b/crates/harvester_engine/Cargo.toml
@@ -17,10 +17,10 @@ html2md = "0.2"
 scraper = "0.25.0"
 encoding_rs = "0.8"
 chardetng = "0.1"
-thiserror = "2"
+thiserror.workspace = true
 sha2 = "0.10"
 tempfile = "3"
-serde_json = "1"
+serde_json.workspace = true
 
 [dev-dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
