ExctractLinks: Phase 3 — Propagate to Core

--- a/crates/harvester_core/Cargo.toml
+++ b/crates/harvester_core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
+url = "2"
 
 [dev-dependencies]
 engine_logging = { path = "../engine_logging" }
